# scuttle-it

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  workspace.json  yt_initial_data.json
apps/audio-server/: README.md  config.py  install.py  main.py  pyproject.toml  requirements.txt  setup.py
apps/audio-server/api/: dependencies.py
apps/audio-server/api/routers/: audio_router.py  edit_router.py  job_router.py  like_router.py  playlist_router.py  queue_router.py  retrieval_router.py  search_router.py  settings_router.py  stats_router.py  test_router.py  track_router.py  websocket_router.py
apps/audio-server/boot/: boot_exceptions.py  boot_utils.py  errors.py  helpers.py  install_cloudflared.py  install_deno.py  install_ffmpeg.py  setup_env.py  setup_venv.py
apps/audio-server/core/audio/: processor.py  utils.py
apps/audio-server/core/download/: download_exceptions.py  download_queue.py  download_worker.py  exceptions.py
apps/audio-server/core/link/: exceptions.py  link_adapter.py  link_types.py
apps/audio-server/database/: database_manager.py  schema.sql
apps/audio-server/routers/: dependencies.py  test_router.py
apps/audio-server/sync/: pokes.py  websocket_manager.py
apps/audio-server/tests/: benchmark_folder_walk.py  benchmark_stream_retrieval.py  conftest.py  notes.md  test_db.py  test_db_manager.py  test_link_adapter.py  test_models.py  test_yt.py  test_yt_client.py
apps/desktop-launcher/: Cargo.toml  README.md  build.rs
apps/desktop-launcher/src/: constants.rs  main.rs  styles.rs  types.rs  workspace.rs
(+184 files in other folders)
