[package]
name = "desktop-launcher"
version = "0.1.0"
authors = ["whimsypingu"]
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
